# ComfyUI_FlashVSR

./: FlashVSR_node.py  README.md  __init__.py  model_loader_utils.py  pyproject.toml  requirements.txt
FlashVSR/diffsynth/models/: utils.py  wan_video_dit.py
FlashVSR/diffsynth/pipelines/: flashvsr_full.py  flashvsr_tiny.py
FlashVSR/examples/WanVSR/: infer_flashvsr_full.py  infer_flashvsr_tiny.py
FlashVSR/examples/WanVSR/utils/: utils.py
example_workflows/: flashvsr.json  flashvsr1022.json  flashvsr18.json
