[project]
name = "flashvsr"
description = ""
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["torch", "torchaudio", "torchmetrics", "torchsde", "torchvision", "accelerate", "einops", "huggingface-hub", "matplotlib", "numpy", "opencv-python", "opencv-python-headless", "peft", "pillow0", "safetensors", "sentencepiece", "transformers", "pytorch-lightning", "imageio", "imageio-ffmpeg", "protobuf", "ftfy", "pandas", "tqdm", "datasets"]

[project.urls]
Repository = "https://github.com/smthemex/ComfyUI_FlashVSR"
#  Used by Comfy Registry https://registry.comfy.org

[tool.comfy]
PublisherId = "smthemex"
DisplayName = "ComfyUI_FlashVSR"
Icon = ""
includes = []
